# folke-online

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  add-path.sh  build-no-tail.sh  build.sh  cabal-config  entrypoint.sh  eslint.config.js  generate-exercise-components.mts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/actions/build-in-docker/: action.yml
.github/workflows/: publish-pages.yml
editor/: index.html
exercises/: index.html
folke/: Makefile  folke.cabal
folke-wasm-wrapper/: build-no-tail.sh  build.sh  cabal.project  folke-wasm-wrapper.cabal  haskell-proof-validator.cabal
folke-wasm-wrapper/src/: Main.hs
folke/assets/examples/exams/: exam_161025_5b.folke  exam_181030_7b.folke  exam_201027_3a.folke  exam_211025_3b.folke  exam_220103_3c.folke  exam_230103_3d.folke  exam_230814_3a.folke  exam_231026_3d.folke  exam_240103_3c.folke  exam_240828_3d.folke  exam_241031_3d.folke  exam_250107_3d.folke
folke/src/Backend/: Environment.hs  Helpers.hs  TypeChecker.hs  Types.hs
folke/src/Logic/: Abs.hs  Lex.hs  Par.hs
folke/src/Shared/: Parse.hs
folke/test/: Main.hs
folke/test/proofs/correct/: orEBoxesFirst.folke  orESwapBoxes.folke
folke/test/proofs/incorrect/: argsInOneInput.folke  assumeMustBeFirst.folke  assumeMustBeFirst2.folke  assumeMustBeFirst3.folke  conclusionInSubproof2.folke  conclusionInSubproof3.folke  conclusionInSubproof4.folke  manualPremise.folke  manualPremise2.folke
guide/: index.html
haskell-proof-validator/: build.sh  cabal.project  haskell-proof-validator.cabal  hello.hs
haskell-proof-validator/src/: Main.hs
src/: App-exercises.tsx  App.tsx  index.css  main-exercises.tsx  proof.d.ts  vite-env.d.ts
src/app-editor/: App.module.css  App.tsx
src/app-exercises/: App.module.css  App.tsx  main.tsx
src/app-guide/: App.tsx
src/app-root/: App.tsx  main.tsx
src/assets/exercises-markdown/: 2.folke  3.folke  Modus-Tollens.folke  Modus-Tollens.md  getting-started.md  week-1.md  week-2.md  week-3.md  week-4.md
src/components/: ActionBar.module.css  ActionBar.tsx  AutocompleteInput.tsx  ConclusionField.tsx  ErrorBoundary.tsx  ExamList.tsx  Exercise.tsx  GlobalErrorMessage.tsx  Header.module.css  Header.tsx  LastRowActions.tsx  LineNumber.tsx  Modal.tsx  PracticeProofRenderer.tsx  Premise.tsx  PremiseField.tsx  ProofBox.module.css  ProofBox.tsx  ProofContainer.tsx  ProofRenderer.css  ProofRenderer.module.css  ProofRenderer.tsx  ProofSingleRow.module.css  ProofSingleRow.tsx  RenderStep.tsx  RuleModal.tsx  RunWasm.tsx  StaticProofRenderer.tsx  StepsContainer.module.css  StepsContainer.tsx  StepsRenderer.tsx  SymbolDictionary.module.css  SymbolDictionary.tsx  TestList.tsx  TextField.tsx  ValidateButton.module.css  ValidateButton.tsx
src/components/Accordion/: Accordion.module.css  Accordion.tsx
src/components/ActionBar/: ActionBar.module.css  ActionBar.tsx
src/components/AutocompleteInput/: AutocompleteInput.module.css  AutocompleteInput.tsx
src/components/Chip/: Chip.module.css  Chip.tsx
src/exercises/: exercise-1.md
src/exercises-markdown/: exercise-2.md
src/helpers/: ProofContext.ts  ProofContext.tsx  drag-drop.ts  generate-latex.ts  generic-helper.ts  keybinds.ts  proof-helper.ts  rules-data.ts  special-characters.ts  use-screen-size.ts  wasm-provider.tsx
src/stores/: context-menu-store.ts  progress-store.ts  progress-store.tsx  proof-store.ts  proof-store.tsx
(+113 files in other folders)
