cabal-version: 3.0

name: folke-wasm-wrapper
version: 0

executable folke-wasm-wrapper
    main-is: Main.hs
    hs-source-dirs: src
    -- other-modules:
    --     ForeignUtils
    -- c-sources: cbits/init.c
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wunused-packages
        -no-hs-main
        -optl-mexec-model=reactor
        "-optl-Wl\
        \,--export=hs_init\
        \,--export=malloc\
        \,--export=free\
        \,--export=my_fac\
        \,--export=checkJsonString\
        \"

    build-depends:
        , base
        , folke
        , aeson==2.2.3.0
        , bytestring==0.12.2.0