cabal-version:      3.0

name:               folke

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             lambducas, TheCoder5550, antonnordbeck, Jiep-man, Jagger002

maintainer:         lucasmol@student.chalmers.se

category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Backend.TypeChecker
                    , Backend.Environment
                    , Backend.Helpers
                    , Backend.Types
                    , Logic.Abs
                    , Logic.Par
                    , Logic.Lex
                    , Shared.Messages
                    , Shared.FESequent
                    , Shared.SpecialCharacters
                    , Shared.Parse
    build-depends:    base ^>=4.21.0.0
                    , mtl
                    , containers
                    , text
                    , directory
                    , array
                    , aeson
                    , aeson-pretty
                    , bytestring
                    --, text-show
                    , lens
                    , random
                    , process
                    , filepath
                    , stm
                    , utf8-string
                    , extra
                    -- base 4.17.2.1

    build-tool-depends: alex:alex, happy:happy

    default-extensions: OverloadedStrings
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite folke-test
    import:           warnings

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.21.0.0,
        folke,
        HUnit,
        directory,
        filepath,
        array,
        aeson,
        aeson-pretty,
        bytestring,
        text,
        containers,
        text-show

    default-extensions: OverloadedStrings